--- a/style.css
+++ b/style.css
@@ -39,8 +39,10 @@ header .logo:hover {
 header .menu {
 	margin: 0;
 	padding: 0;
-	/*float: left;
-	position: absolute;
+	float: left;
+	display: table;
+	width: 100%;
+	/*position: absolute;
 	bottom: 0px;
 	right: 0px;
 	background: #f1f1f1;*/
@@ -59,14 +61,16 @@ header .menu:last-child {
 }
 header .menu-item {
 	font-size: .95em;
-	float: left;
+	display: table-cell;
+	text-align: center;
+	/*float: left;*/
 	list-style: none;
 	border-bottom: 2px solid #f1f1f1;
 	border-left: 1px solid #f1f1f1;
 	/*border-right: 1px solid #f1f1f1; */
 	margin: 0;
 	padding: 10px 7px;
-	position: relative;
+	/*position: relative;*/
 	overflow: hidden;
 }
 header .menu-item:hover, header .current-menu-item {
